--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -19,7 +19,6 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">File</a></li>
         <li><a href="#">Options</a></li>
       </ul>
 		<ul class="nav navbar-nav navbar-right">
@@ -47,13 +46,10 @@
 		<div class="col-md-12">
 			<div class="btn-toolbar" role="toolbar" aria-label="...">
 				<div class="btn-group" role="group" aria-label="...">
-					<button type="button" class="btn btn-default"><img src="{% static 'img/fileimport.gif' %}" align="absmiddle" title='Import Dialog'></button>
-					<button type="button" class="btn btn-default"><img src="{% static 'img/fileexport.gif' %}" align="absmiddle" title='Export Dialog'></button>
-					<button type="button" class="btn btn-default"><img src="{% static 'img/reload.gif' %}" align="absmiddle" title='Redraw Tree/List'></button>
-					<button type="button" class="btn btn-default"><img src="{% static 'img/expand.gif' %}" align="absmiddle" title='Expand Tree'></button>
+					<button type="button" class="btn btn-default" title='Expand Tree'><img src="{% static 'img/expand.gif' %}" align="absmiddle"></button>
+					<button type="button" class="btn btn-default"><img src="{% static 'img/collapse.gif' %}" align="absmiddle" title='Collapse Tree'></button>
 				</div>
 				<div class="btn-group" role="group" aria-label="...">
-					<button type="button" class="btn btn-default"><img src="{% static 'img/collapse.gif' %}" align="absmiddle" title='Collapse Tree'></button>
 					<button type="button" class="btn btn-default"><img src="{% static 'img/goal.gif' %}" align="absmiddle" title='Create Objective'></button>
 					<button type="button" class="btn btn-default"><img src="{% static 'img/dynamite.gif' %}" align="absmiddle" title='Create Obstacle'></button>
 					<button type="button" class="btn btn-default"><img src="{% static 'img/condition.gif' %}" align="absmiddle" title='Create Condition'></button>
@@ -74,7 +70,27 @@
 			</div>				
 		</div>
 	</div>
-	<br>
+    <br>
+    <div class="row">
+        <div class="col-md-12">
+            <ul class="nav nav-tabs">
+                <li role="presentation" class="active"><a href="#">Home</a></li>
+                <li role="presentation"><a href="#">Help</a></li>
+                <li role="presentation" class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
+                Dropdown <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu" role="menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+                </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
 </div>
 
 {% endblock content %}
